clusters/bison/istio/traffic-management/multicluster/armadillo-httpbin.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: armadillo-httpbin
spec:
  hosts:
    - httpbin.armadillo-offerings.global
    # - httpbin.armadillo-offerings.armadillo.global # Can be anything, as long as appropriate EnvoyFilter is in place on target cluster
  location: MESH_INTERNAL
  exportTo:
    - "*" # Temporarily set this to all namespaces
  ports:
    - name: http-armadillo
      number: 8000
      protocol: http
  resolution: STATIC
  addresses:
    - 240.0.0.1
  endpoints:
    - address: 172.18.101.150 # This IP is assigned as the loadBalancerIP for IngressGateway
      network: external
      ports:
        http-armadillo: 15443
---
# VirtualService definition on Armadillo side won't be able to handle the chaos setup.
# TODO: Check if this can be handled at IngressGateway instead
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-httpbin-routing
spec:
  hosts:
    - httpbin.armadillo-offerings.global
    # - httpbin.armadillo-offerings.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.armadillo-offerings.global
            # host: httpbin.armadillo-offerings.svc.cluster.local # Use cluster.local based multicluster
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400

    # For testing VirtualService created URI
    - match:
        - uri:
            prefix: /istio
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.armadillo-offerings.global
            # host: httpbin.armadillo-offerings.svc.cluster.local # Use cluster.local based multicluster

    # Default routing
    - route:
        - destination:
            host: httpbin.armadillo-offerings.global
            # host: httpbin.armadillo-offerings.svc.cluster.local # Use cluster.local based multicluster
