clusters/bison/istio/traffic-management/multicluster/bison-color-svc-ingress-traffic.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: bison-color-svc-ingress-traffic
spec:
  hosts:
    - color-svc.bison-offerings.global
    - color-svc.bison-offerings.bison
  endpoints:
    - address: color-svc.bison-offerings.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - name: http-bison-color-svc
      number: 8800
      protocol: http
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bison-color-svc-multicluster-ingress
  namespace: istio-system
spec:
  hosts:
    # - "*"
    - color-svc.bison-offerings.bison
    - color-svc.bison-offerings.svc.cluster.local
  gateways:
    - istio-system/bison-multicluster-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.bison-offerings.svc.cluster.local
            port:
              number: 8800
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
    - match:
        - uri:
            prefix: /bison
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.bison-offerings.svc.cluster.local
            port:
              number: 8800
